--- a/locales/ja.json
+++ b/locales/ja.json
@@ -1,4 +1,11 @@
 {
   "message": "日本語だよ！",
-  "can_teach":"教えられる言語"
+  "can_teach":"教えられる言語",
+  "details":"詳細を見る",
+  "detail":"詳細",
+  "tool":"使用ツール",
+  "condition":"希望条件",
+  "become_teacher":"先生になる",
+  "number_of_views":"閲覧数",
+  "summary":"自己PR等"
 }
