--- a/locales/ja.json
+++ b/locales/ja.json
@@ -7,5 +7,12 @@
   "condition":"希望条件",
   "become_teacher":"先生になる",
   "number_of_views":"閲覧数",
-  "summary":"自己PR等"
+  "summary":"自己PR等",
+  "loading":"読込中",
+  "sing_up":"新規登録",
+  "page":"さんの詳細",
+  "close":"閉じる",
+  "law":"特定商取引法に基づく表記",
+  "googlelogin":"グーグルアカウントでログイン",
+  "navigate":"教わりたい言語を選択してください"
 }
