マイページの一部作成

--- a/locales/en.json
+++ b/locales/en.json
@@ -14,5 +14,6 @@
   "close":"close",
   "law":"Specified Commercial Transaction Act",
   "googlelogin":"Login with Google account",
-  "navigate":"Choose langage you want to learn"
+  "navigate":"Choose langage you want to learn",
+  "english":"english"
 }
