--- a/locales/ja.json
+++ b/locales/ja.json
@@ -13,6 +13,8 @@
   "page":"さんの詳細",
   "close":"閉じる",
   "law":"特定商取引法に基づく表記",
-  "googlelogin":"グーグルアカウントでログイン",
-  "navigate":"教わりたい言語を選択してください"
+  "googlelogin":"Googleアカウントでログイン",
+  "navigate":"教わりたい言語を選択してください",
+  "english":"英語",
+  "example":"例えば、英語圏の人に日本語を教えたい場合、英語で入力してください。"
 }
