編集ボタンの追加

--- a/locales/en.json
+++ b/locales/en.json
@@ -15,5 +15,6 @@
   "law":"Specified Commercial Transaction Act",
   "googlelogin":"Login with Google account",
   "navigate":"Choose langage you want to learn",
-  "english":"english"
+  "english":"english",
+  "edit":"edit"
 }
