--- a/locales/ja.json
+++ b/locales/ja.json
@@ -16,5 +16,6 @@
   "googlelogin":"Googleアカウントでログイン",
   "navigate":"教わりたい言語を選択してください",
   "english":"英語",
+  "edit":"編集",
   "example":"例えば、英語圏の人に日本語を教えたい場合、英語で入力してください。"
 }
