--- a/locales/ko.json
+++ b/locales/ko.json
@@ -14,5 +14,6 @@
   "close":"닫기",
   "law":"Specified Commercial Transaction Act",
   "googlelogin":"Login with Google account",
-  "navigate":"배워 언어를 선택하십시오"
+  "navigate":"배워 언어를 선택하십시오",
+  "edit":"편집"
 }
