--- a/locales/ja.json
+++ b/locales/ja.json
@@ -17,5 +17,11 @@
   "navigate":"教わりたい言語を選択してください",
   "english":"英語",
   "edit":"編集",
-  "example":"例えば、英語圏の人に日本語を教えたい場合、英語で入力してください。"
+  "example":"例えば、英語圏の人に日本語を教えたい場合、英語で入力してください。",
+  "usingLangage":"このページを何語で入力しますか？",
+  "langageLevel":"その言語のレベル",
+  "whatLangageYotTeach":"何語を教えますか？",
+  "name":"名前",
+  "picture":"画像の添付",
+  "submit":"送信"
 }
