選択肢の多言語化(いったん日本語だけ作ってしまう)。

--- a/locales/en.json
+++ b/locales/en.json
@@ -19,7 +19,7 @@
   "edit":"edit",
   "example":"Use Japanese when you want to teach English for Japanese people",
   "usingLangage":"what langage you use?",
-  "langageLevel":"level of that langage",
+  "langageLevelLabel":"level of that langage",
   "whatLangageYotTeach":"What langage you teach?",
   "name":"name",
   "picture":"select picture",
