--- a/locales/ja.json
+++ b/locales/ja.json
@@ -19,7 +19,25 @@
   "edit":"編集",
   "example":"例えば、英語圏の人に日本語を教えたい場合、英語で入力してください。",
   "usingLangage":"このページを何語で入力しますか？",
-  "langageLevel":"その言語のレベル",
+  "langageLevel":{
+    "label":"その言語のレベル",
+    "items":[{
+      "name": "ほとんどわかりません。",
+      "val": "0"
+    }, {
+      "name": "簡単な挨拶ができるぐらいです",
+      "val": "1"
+    }, {
+      "name": "簡単なコミュニケーションならとれます",
+      "val": "2"
+    }, {
+      "name": "ある程度の日常会話ができます",
+      "val": "3"
+    }, {
+      "name": "ほとんど問題なくコミュニケーションが取れます",
+      "val": "4"
+    }]
+  },
   "whatLangageYotTeach":"何語を教えますか？",
   "name":"名前",
   "picture":"画像の添付",
