--- a/locales/en.json
+++ b/locales/en.json
@@ -18,8 +18,34 @@
   "english":"english",
   "edit":"edit",
   "example":"Use Japanese when you want to teach English for Japanese people",
-  "usingLangage":"what langage you use?",
-  "langageLevelLabel":"level of that langage",
+  "langage": {
+    "label":"what langage you use?",
+    "items":[
+      { "val": 0, "name": "English" },
+      { "val": 1, "name": "Japanese" },
+      { "val": 2, "name": "Korean" },
+      { "val": 3, "name": "Chinese" }
+    ]
+  },
+  "langageLevel":{
+    "label":"level of that langage",
+    "items":[{
+      "name": "ほとんどわかりません。",
+      "val": "0"
+    }, {
+      "name": "簡単な挨拶ができるぐらいです",
+      "val": "1"
+    }, {
+      "name": "簡単なコミュニケーションならとれます",
+      "val": "2"
+    }, {
+      "name": "ある程度の日常会話ができます",
+      "val": "3"
+    }, {
+      "name": "ほとんど問題なくコミュニケーションが取れます",
+      "val": "4"
+    }]
+  },
   "whatLangageYotTeach":"What langage you teach?",
   "name":"name",
   "picture":"select picture",
