--- a/locales/ja.json
+++ b/locales/ja.json
@@ -30,19 +30,19 @@
     "label":"その言語のレベル",
     "items":[{
       "name": "ほとんどわかりません。",
-      "val": "0"
+      "val": 0
     }, {
       "name": "簡単な挨拶ができるぐらいです",
-      "val": "1"
+      "val": 1
     }, {
       "name": "簡単なコミュニケーションならとれます",
-      "val": "2"
+      "val": 2
     }, {
       "name": "ある程度の日常会話ができます",
-      "val": "3"
+      "val": 3
     }, {
       "name": "ほとんど問題なくコミュニケーションが取れます",
-      "val": "4"
+      "val": 4
     }]
   },
   "whatLangageYotTeach":"何語を教えますか？",
