--- a/locales/ja.json
+++ b/locales/ja.json
@@ -50,5 +50,6 @@
   "picture":"画像の添付",
   "submit":"送信",
   "message":"メッセージを送る",
-  "contract":"契約を希望する"
+  "contract":"契約を希望する",
+  "editTitle":"のページを編集"
 }
