indexページのレイアウトの変更をした。

--- a/locales/ja.json
+++ b/locales/ja.json
@@ -5,7 +5,7 @@
   "tool":"使用ツール",
   "condition":"希望条件",
   "become_teacher":"先生になる",
-  "number_of_views":"閲覧数",
+  "number_of_views":"回の契約希望",
   "summary":"自己PR等",
   "loading":"読込中",
   "sing_up":"新規登録",
